--- a/client/accounts-ui/login_buttons.less
+++ b/client/accounts-ui/login_buttons.less
@@ -43,6 +43,7 @@
 
 #login-buttons .login-link-text {
     margin-left: 5px; /* so that other elements aren't too close */
+    color:#FFF;
 }
 
 .accounts-dialog .login-button {
