Add prettyPrint helper to db admin so documents retrieved from db and printed nicely

--- a/violet/client/violet.css
+++ b/violet/client/violet.css
@@ -58,3 +58,11 @@ body {
 .document {
 	margin-bottom:30px;
 }
+
+.vio-obj, .vio-kv {
+	margin-left:20px;
+}
+
+.vio-obj:first-child {
+	margin:0;
+}
